[package]
name = "ossifrage"
version = "0.1.0"
authors = ["iPolyomino <macbookpromacbookpromacbookpro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
tokio = { version = "0.2", features = ["macros"] }
html5ever = "*"
tendril = "*"
