[package]
name = "ossifrage"
version = "0.1.0"
authors = ["iPolyomino <macbookpromacbookpromacbookpro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "^0.12.1"
ansi_colours = "^1.0"
reqwest = "0.10"
tokio = { version = "0.2", features = ["macros"] }
html5ever = "0.25"
markup5ever_rcdom = "0.1.0"
regex = "1"
